<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="co.edu.unab.tas.ejuab.biplapp.model.entity.User" />

        <variable
            name="password"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.RegisterActivity">

        <ImageView
            android:id="@+id/iv_banner_init"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_buho_init" />

        <TextView
            android:id="@+id/tv_title_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/sorts_mill_goudy"
            android:text="@string/txt_registro_usuario"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#354953"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_banner_init"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_user_document_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_register"
            android:hint="@string/txt_hint_identificacion_usuario"
            android:text="@={user.document}"/>

        <EditText
            android:id="@+id/et_user_name_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/et_user_document_form"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/txt_hint_nombre_usuario"
            android:text="@={user.name}"/>


        <EditText
            android:id="@+id/et_user_last_name_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/et_user_name_form"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/txt_hint_apellido_usuario"
            android:text="@={user.lastName}"/>

        <EditText
            android:id="@+id/et_user_phone_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/et_user_last_name_form"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/txt_hint_telefono_usuario"
            android:text="@={user.phone}"/>

        <EditText
            android:id="@+id/et_user_email_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/et_user_phone_form"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/txt_hint_correo_usuario"
            android:text="@={user.email}"/>

        <EditText
            android:id="@+id/et_user_pass_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="14"
            android:hint="@string/txt_hint_pass_usuario"
            android:inputType="textPassword"
            android:text="@={password}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_user_email_form" />

        <Button
            android:id="@+id/bt_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#354953"
            android:fontFamily="@font/sorts_mill_goudy"
            android:text="Crear Cuenta"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_user_pass_form" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>