<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="co.edu.unab.tas.ejuab.biplapp.model.entity.User" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.activity.MainActivity$UserFormActivity">

            <ImageView
                android:id="@+id/iv_user_form"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageButton
                android:id="@+id/ib_camera_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"
                app:layout_constraintEnd_toStartOf="@id/ib_gallery_form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_user_form" />

            <ImageButton
                android:id="@+id/ib_gallery_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_gallery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ib_camera_form"
                app:layout_constraintTop_toBottomOf="@id/iv_user_form" />

            <EditText
                android:id="@+id/et_document_user_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="14"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/ib_gallery_form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/txt_hint_documento_usuario"
                android:text="@{user.document}"/>

            <EditText
                android:id="@+id/et_name_user_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="14"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/et_document_user_form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/txt_hint_nombre_usuario"
                android:text="@{user.name}"/>

            <EditText
                android:id="@+id/et_lastname_user_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="14"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/et_name_user_form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/txt_hint_apellido_usuario"
                android:text="@{user.name}"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>