<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="book" type="co.edu.unab.tas.ejuab.biplapp.model.entity.Book" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.activity.ActivityAddBook">

            <TextView
                android:id="@+id/tv_title_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:padding="8dp"
                android:fontFamily="@font/sorts_mill_goudy"
                android:text="Diligencie la información para el Registro del Libro"
                android:textColor="#354953"
                android:textSize="17dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/iv_book_cover_add"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_launcher_background"
                android:layout_marginTop="20dp"
                bind:image="@{book.cover}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_add"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageButton
                android:id="@+id/ib_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ib_gallery"
                app:layout_constraintTop_toBottomOf="@+id/iv_book_cover_add"/>

            <ImageButton
                android:id="@+id/ib_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_gallery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ib_camera"
                app:layout_constraintTop_toBottomOf="@+id/iv_book_cover_add"/>


            <EditText
                android:id="@+id/et_title_book_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="14"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/ib_gallery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/txt_hint_title"
                android:text="@={book.title}"/>

            <EditText
                android:id="@+id/et_author_book_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="14"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/et_title_book_add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/txt_hint_author"
                android:text="@={book.author}"/>

            <EditText
                android:id="@+id/et_editorial_book_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="14"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/et_author_book_add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/txt_hint_editorial"
                android:inputType="textMultiLine"
                android:text="@={book.editorial}"/>

            <Spinner
                android:id="@+id/sp_category_book_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintTop_toBottomOf="@+id/et_editorial_book_add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Button
                android:id="@+id/bt_add_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sp_category_book_add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:backgroundTint="#354953"
                android:fontFamily="@font/sorts_mill_goudy"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:text="@string/txt_add_book"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>